feat(JavaJCE): W4 — HKDF via javax.crypto.KDF (JDK 27's finalized KDF API)
P11HKDFKDFSpi implements KDFSpi, registered as HKDF-SHA256/384/512.
Single-IKM/single-salt only, as a genuine engine constraint rather than
a policy choice: CKM_HKDF_DERIVE operates on exactly one base-key handle
and one optional salt, and the engine explicitly rejects
CKF_HKDF_SALT_KEY, so multi-element ikms()/salts() lists are rejected
outright rather than inventing an unspecified concatenation semantics
for JDK's own List<SecretKey> generalization.

New CK_HKDF_PARAMS FFM struct: the first struct in this module with
1-byte CK_BBOOL fields immediately preceding an 8-byte field, an
ambiguous layout case none of the earlier all-CK_ULONG/pointer structs
exercised. Verified via a standalone C sizeof/offsetof probe against
this repo's own pkcs11.h before writing the layout, rather than assumed
from ABI convention.

Root-caused a non-obvious engine requirement via live bisection after
source-reading alone gave a misleading picture: C_DeriveKey for HKDF
failed with CKR_TEMPLATE_INCOMPLETE even though the HKDF-specific code
looks self-sufficient in isolation (it force-overrides CKA_CLASS/
CKA_KEY_TYPE regardless of the caller's template). The real cause is a
separate, shared generic template pre-check reached earlier in
C_DeriveKey (isImplicit=false for this mechanism) that requires those
same two attributes present in the caller's template too, even though
their values get discarded moments later. Confirmed conclusively via an
isolated C reproduction dlopen'd directly against the built .so,
bypassing Java entirely, which bisected the exact missing attribute
before touching any Java code.

Also found the same missing-CKA_DERIVE bug class a third time this
session: the derived PRK from a two-step Extract-then-Expand needs
CKA_DERIVE itself to chain into the Expand step. Fixed proactively in
the same edit.

Bumped the module's compiler baseline from JDK 24 to 27 in a prior
commit specifically because